# p3

./: .stylish-haskell.yaml  CHANGELOG.md  LICENSE  README.md  p3.cabal
src/P3/: Combinators.hs  Init.hs  Logic.hs  Monad.hs  OperatorParser.hs  Types.hs  Utils.hs
src/P3/Utils/: TH.hs
src/Text/: P3.hs
src/Text/P3/: Combinators.hs  Logic.hs  Monad.hs  OperatorParser.hs  Types.hs
test/: Main.hs
test/P3/: Example1.hs  Example2.hs  TH.hs
test/P3/Example1/: TH.hs
test/P3/Example2/: Lexer.x  TH.hs
test/Text/P3/: TH.hs
