cabal-version:      3.0

name:               p3

version:            0.1.0

synopsis:       A parser combinator library based on Pratt parser.

description:    Please see the README on GitHub at <https://github.com/ksrky/p3#README>.

homepage:       https://github.com/ksrky/p3#README

bug-reports:    https://github.com/ksrky/p3/issues

license:            BSD-3-Clause

license-file:       LICENSE

author:             R.Kashiwagi

maintainer:         kswgrky@gmail.com

category:           Language
build-type:         Simple

extra-doc-files:    CHANGELOG.md

source-repository head
   type:     git
   location: https://github.com/ksrky/p3

common warnings
    ghc-options: -Wall

library
    import:           warnings

    exposed-modules:  Text.P3
                      Text.P3.Combinators
                      Text.P3.Logic
                      Text.P3.Monad
                      Text.P3.Types
                      Text.P3.OperatorParser

    default-extensions: FunctionalDependencies
                        ImportQualifiedPost
                        LambdaCase
                        PatternSynonyms
                        OverloadedStrings
                        TupleSections

    ghc-options:    -Wall
                    -Wcompat
                    -Widentities
                    -Wincomplete-record-updates
                    -Wincomplete-uni-patterns
                    -Wmissing-export-lists
                    -Wmissing-home-modules
                    -Wpartial-fields
                    -Wredundant-constraints

    build-depends:    base ^>= 4.19.2.0,
                      containers ^>= 0.6.8,
                      lens ^>= 5.3.4,
                      logict ^>= 0.8.2.0,
                      mtl ^>= 2.3.1,
                      template-haskell ^>= 2.21.0.0,
                      text ^>= 2.1.1

    hs-source-dirs:   src

    default-language: GHC2021

test-suite p3-test
    import:           warnings

    default-language: GHC2021

    type:             exitcode-stdio-1.0

    hs-source-dirs:   test

    main-is:          Main.hs

    other-modules:    Text.P3.TH

    default-extensions: FunctionalDependencies
                        ImportQualifiedPost
                        LambdaCase
                        PatternSynonyms
                        OverloadedStrings
                        TupleSections

    ghc-options:    -Wall
                    -Wcompat
                    -Widentities
                    -Wincomplete-record-updates
                    -Wincomplete-uni-patterns
                    -Wmissing-export-lists
                    -Wmissing-home-modules
                    -Wpartial-fields
                    -Wredundant-constraints

    build-depends:    base ^>=4.19.2.0,
                      p3,
                      array,
                      containers,
                      hspec,
                      hspec-discover,
                      lens,
                      mtl,
                      template-haskell
    
    build-tool-depends: hspec-discover:hspec-discover
